--- a/Scooter/app/src/main/AndroidManifest.xml
+++ b/Scooter/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:theme="@style/Theme.Scooter">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Scooter.NoActionBar">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
